--- a/package.json
+++ b/package.json
@@ -3,10 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@types/styled-components": "^5.1.26",
     "antd": "^5.3.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-highlight-words": "^0.20.0",
     "react-scripts": "5.0.1",
     "styled-components": "^5.3.9",
     "typescript": "^4.9.5"
@@ -15,6 +15,8 @@
     "@types/node": "^18.13.0",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.10",
+    "@types/react-highlight-words": "^0.16.4",
+    "@types/styled-components": "^5.1.26",
     "prettier": "^2.8.4"
   },
   "scripts": {
